--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Assets/Standard+Assets/Cameras/Scripts/AbstractTargetFollower.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/SkewTextExample.cs" />
     <Compile Include="Assets/Standard+Assets/Environment/Water/Water/Scripts/Displace.cs" />
+    <Compile Include="Assets/Scripts/JumpScare.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/WarpTextExample.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TextMeshProFloatingText.cs" />
     <Compile Include="Assets/Standard+Assets/2D/Scripts/Restarter.cs" />
